--- a/css/chats.css
+++ b/css/chats.css
@@ -59,4 +59,11 @@
   font-size:20px;
   color:#532737;
   box-shadow:0px 3px 10px rgba(0,0,0,0.2);
+  transition:color .3s, background .3s, transform .3s ease-in-out;
+}
+
+.chat-btn:hover{
+  color:#ffe94a;
+  background:#523737;
+  transform:rotateY(1turn);
 }
