--- a/css/navigation.css
+++ b/css/navigation.css
@@ -8,7 +8,7 @@
   padding-bottom:5px;
   padding: 10px 30px 5px 30px;
   border-top:1px solid #c1c1c1;
-  
+
 }
 
 
@@ -18,6 +18,11 @@
   flex-direction:column;
   text-decoration:none;
   color:#c1c1c1;
+  transition: transform .3s linear;
+}
+
+.tab-bar .tab-bar__tab:hover{
+  transform:scale(1.1);
 }
 
 .tab-bar .tab-bar__tab i{
