--- a/css/more.css
+++ b/css/more.css
@@ -111,6 +111,10 @@
   margin-right:20px;
 }
 
+.more__links .more__option a{
+  text-decoration:none;
+}
+
 .more__links .more__option img{
   height:45px;
   margin-bottom:10px;
