--- a/hide_javascript/index.css
+++ b/hide_javascript/index.css
@@ -2,7 +2,6 @@ body{
   width: 100%;
   margin: 0 0;
   padding: 250px 0 0 0;
-  background-color: #523737;
 }
 
 .btn{
@@ -33,7 +32,9 @@ h1{
   justify-content: flex-start;
   align-items: center;
   flex-direction:column;
-  background-color: #523737;
+  /* background-color: #523737; */
+  width: 500px;
+
 }
 
 .timer a {
@@ -57,18 +58,21 @@ h1{
 .timer .timer-body{
   display:flex;
   justify-content:center;
+  align-items: center;
   margin:0;
-  padding-bottom:20px;
-  width:100%;
+  padding-left: 10%;
+  padding-bottom:100px 0 100px 20px;
+  width:80%;
   position:fixed;
   z-index:2;
   top:0;
+
 }
 
 .todo-div{
   width:100%;
   padding-top:30px;
-  background-color: #523737;
+  /* background-color: #523737; */
 }
 
 .js-toDoList{
@@ -77,37 +81,43 @@ h1{
 }
 
 .js-toDoList li{
+  color:white;
   border-bottom:1px solid rgba(225,225,225,0.3);
-  padding: 10px 0;
+  padding: 20px 0;
   display:flex;
-  line-break;
   width:100%;
   justify-content:space-between;
 }
 
-
-.js-toDoList div:first-child{
-  width:90%;
-  color:white;
-  display:flex;
-  flex-direction:column;
-  align-items:flex-start;
+.js-toDoList li .fd .textSpan div{
+  font-size: 12px;
+  width: 120px;
 }
 
-.js-toDoList div:last-child{
-  display:flex;
-  align-items:center;
-  justify-content:center;
+.js-toDoList li div{
+  margin-top: 30px;
 }
 
-.js-toDoList div span:first-child{
-  font-size:10px;
+.js-toDoList li .fd{
+  width: 90%;
+  padding-left: 30px;
 }
 
-.js-toDoList div span:last-child{
-  line-break;
+.js-toDoList li .fd .textSpan{
+  width: 95%;
+  font-size: 20px;
+  display:block;
+  word-wrap: break-word;
 }
 
+.js-toDoList li .fd .textSpan div{
+  margin-bottom: 10px;
+}
+
+.js-toDoList li div:last-child{
+  display: flex;
+  align-items: center;
+}
 
 .js-toDoList button{
   display:flex;
@@ -115,7 +125,6 @@ h1{
   align-items:center;
   height:20px;
   width:20px;
-  opacity:0.9;
+  opacity:0.8;
   border-radius:50%;
-
 }
