--- a/hide_javascript/index.css
+++ b/hide_javascript/index.css
@@ -1,12 +1,33 @@
+@keyframes iden {
+  from{
+    opacity: 0;
+  } to{
+    opacity: 1;
+  }
+}
+
+body{
+  background-color: #2c3e50;
+}
+
 body{
   width: 100%;
   margin: 0 0;
   padding: 250px 0 0 0;
+  background-color: #2c3e50;
+  animation: iden 1s linear;
 }
 
+
+input{
+  padding: 4px;
+  border-radius:5px;
+}
 .btn{
   cursor:pointer;
 }
+
+
 
 h1{
   color:red;
@@ -78,6 +99,7 @@ h1{
 .js-toDoList{
   left: 0;
   padding-right:40px;
+
 }
 
 .js-toDoList li{
